vlib/v/scanner/tests/dec_consecutively_separator_err.vv
fn main() {
	_ := _20
}
